# CStMGen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: sample_config_file.json
data/sample_project/: config_file.json
data/sample_project/definition/: config_file.json  fake_global_data.c  fake_machine_data_fields_decl.c  fake_machine_data_fields_init.c  fake_state_enter_code.c  fake_state_input_code.c  fake_state_leave_code.c  fake_state_output_code.c  fake_state_run_code.c  fake_transit_always_failure.c  fake_transit_always_idle.c  fake_transit_always_init.c  fake_transit_always_read_device.c  fake_transit_always_search_device.c  fake_transit_always_write_device.c
data/templates/: cstm_state_data_desc_file_name_template_c  cstm_state_data_desc_template_c  cstm_state_data_desc_template_h  cstm_state_diagram_file_name_template_c  cstm_state_diagram_template_c  cstm_state_enum_file_name_template_h  cstm_state_enum_state_name_text  cstm_state_enum_template_h  cstm_state_file_name_template_c  cstm_state_include_text_template  cstm_state_node_text_template  cstm_state_template.h  cstm_state_template_c  cstm_state_transition_template.c  cstm_state_transition_template_c
data/templates/conv/: template_to_hex.sh
data/templates/state_code/: cstm_state_file_name_template_h  cstm_state_global_data_placeholder_name_template  cstm_state_handler_enter_placeholder_name_template  cstm_state_handler_input_placeholder_name_template  cstm_state_handler_leave_placeholder_name_template  cstm_state_handler_output_placeholder_name_template  cstm_state_handler_run_placeholder_name_template  cstm_state_template_c  cstm_state_template_h  cstm_state_transition_evaluation_placeholder_name_template  cstm_state_transition_name_template  cstm_state_transition_template_c
data/templates/state_diagram_code/: cstm_state_diagram_file_name_template_h  cstm_state_diagram_template_c  cstm_state_diagram_template_h
data/templates/state_machine_data/: cstm_state_data_decl_placeholder_name_template  cstm_state_data_desc_file_name_template_h  cstm_state_data_desc_template_c  cstm_state_data_desc_template_h  cstm_state_data_init_placeholder_name_template
data/templates/state_machine_enum/: cstm_state_enum_template_h
include/CStMGen/: cstmgen_json_machine_structure.h  cstmgen_main.h  cstmgen_params.h  cstmgen_process.h  cstmgen_process_templates.h  cstmgen_process_utils.h  json_machine_structure.h
include/CStMGen/data/templates/: cstm_state_data_desc_file_name_template_c.h  cstm_state_data_desc_file_name_template_h.h  cstm_state_data_desc_template_c.h  cstm_state_data_desc_template_h.h  cstm_state_diagram_file_name_template_c.h  cstm_state_diagram_file_name_template_h.h  cstm_state_diagram_template_c.h  cstm_state_diagram_template_h.h  cstm_state_enum_file_name_template_h.h  cstm_state_enum_state_name_template.h  cstm_state_enum_state_name_text.h  cstm_state_enum_template_h.h  cstm_state_file_name_template_c.h  cstm_state_file_name_template_h.h  cstm_state_include_text_template.h  cstm_state_node_text_template.h  cstm_state_template_c.h  cstm_state_template_h.h  cstm_state_transition_name_template.h  cstm_state_transition_template_c.h
include/CStMGen/data/templates/state_code/: cstm_state_file_name_template_c.h  cstm_state_file_name_template_h.h  cstm_state_global_data_placeholder_name_template.h  cstm_state_handler_enter_placeholder_name_template.h  cstm_state_handler_input_placeholder_name_template.h  cstm_state_handler_leave_placeholder_name_template.h  cstm_state_handler_output_placeholder_name_template.h  cstm_state_handler_run_placeholder_name_template.h  cstm_state_template_c.h  cstm_state_template_h.h  cstm_state_transition_evaluation_placeholder_name_template.h  cstm_state_transition_name_template.h  cstm_state_transition_template_c.h
include/CStMGen/data/templates/state_diagram_code/: cstm_state_diagram_file_name_template_c.h  cstm_state_diagram_file_name_template_h.h  cstm_state_diagram_template_c.h  cstm_state_diagram_template_h.h  cstm_state_include_text_template.h  cstm_state_node_text_template.h
include/CStMGen/data/templates/state_machine_data/: cstm_state_data_decl_placeholder_name_template.h  cstm_state_data_desc_file_name_template_c.h  cstm_state_data_desc_file_name_template_h.h  cstm_state_data_desc_template_c.h  cstm_state_data_desc_template_h.h  cstm_state_data_init_placeholder_name_template.h
include/CStMGen/data/templates/state_machine_enum/: cstm_state_enum_file_name_template_h.h  cstm_state_enum_state_name_text.h  cstm_state_enum_template_h.h
src/CStMGen/: cstmgen_json_machine_structure.cpp  cstmgen_main.cpp  cstmgen_params.cpp  cstmgen_process.cpp  cstmgen_process_utils.cpp  json_machine_structure.cpp
src/app/: main.cpp
